fixed some alignment issues with slogan on home

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,9 @@
     position: relative;
     overflow: hidden;
     height: 70vh;
-    padding: 15% 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
   .banner-content {
     position: relative;
     z-index: 2;
@@ -10,11 +12,8 @@
       text-align: center;
       color: $charcoal;
       text-shadow: 0.1px 0.1px;
-      // font-family: 'Satisfy', cursive;
-      // font-family: 'Tangerine', cursive;
-      // font-family: 'Great Vibes', cursive;
-      // font-family: 'Homemade Apple', cursive;
-      font-family: 'Calligraffitti', cursive;
+      font-family: 'Homemade Apple', cursive;
+      // font-family: 'Calligraffitti', cursive;
     }
   }
   .banner-image {
@@ -26,17 +25,47 @@
     opacity: 0.6;
   }
 }
-@media only screen and (min-width : 775px) {
+@media only screen and (min-width : 1051px) {
   .banner-content {
     h1 {
-      font-size: 55px;
+      font-size: 42px;
+    }
+  }
+}
+@media only screen and (max-width : 1050px) {
+  .banner-content {
+    h1 {
+      font-size: 32px;
+
     }
   }
 }
 @media only screen and (max-width : 774px) {
   .banner-content {
     h1 {
-      font-size: 35px;
+      line-height: 1.5;
     }
   }
 }
+@media only screen and (min-width : 676px) {
+  .banner-container {
+    padding: 15% 0 0 0
+  }
+}
+@media only screen and (max-width : 675px) {
+  .banner-container {
+    padding: 7% 0 0 0
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
